--- a/content/blogs/best-practices-for-writing-clean-and-maintainable-code/index.mdx
+++ b/content/blogs/best-practices-for-writing-clean-and-maintainable-code/index.mdx
@@ -1,15 +1,17 @@
 ---
-title: "Automating Repetitive Tasks: Productivity Hacks for Developers"
+title: "Best Practices for Writing Clean and Maintainable Code"
 description: How to deploy your Next.js apps on Vercel.
-image: emile-perron-xrVDYZRGdw4-unsplash.jpg
+image: roman-synkevych-vXInUOv1n84-unsplash.jpg
 publishedAt: 2024-05-08 13:00:00
 updatedAt: 2024-05-08 13:00:00
 author: "codebucks"
 isPublished: true
 tags: 
-- productivity
-slug: automating-repetitive-tasks-productivity-hacks-for-developers
+- code quality
+slug: best-practices-for-writing-clean-and-maintainable-code
 ---
+
+
 
 Until now, trying to style an article, document, or blog post with Tailwind has been a tedious task that required a keen eye for typography and a lot of complex custom CSS.
 
@@ -22,7 +24,7 @@ We get lots of complaints about it actually, with people regularly asking us thi
 
 The `@tailwindcss/typography` plugin is our attempt to give you what you _actually_ want, without any of the downsides of doing something stupid like disabling our base styles.
 
-It adds a new `prose` class that you can slap on any block of vanilla HTML content and turn it into a beautiful, well-formatted document:
+It add a new `prose` class that you can slap on any block of vanilla HTML content and turn it into a beautiful, well-formatted document:
 
 ```html
 <article className="prose">
@@ -124,7 +126,7 @@ module.exports = {
   },
   variants: {},
   plugins: [],
-};
+}
 ```
 
 Hopefully that looks good enough to you.
