--- a/content/blogs/introducing-nestyogi-optimizer-deep-learning/index.mdx
+++ b/content/blogs/introducing-nestyogi-optimizer-deep-learning/index.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Introducing NestYogi: A Novel Optimizer for Faster and More Robust Deep Learning"
 description: "Discover NestYogi, a new optimizer presented in our recent paper, combining Nesterov momentum and Yogi's adaptive rates for enhanced deep learning model training."
-image: /NestYogi-7531c0b6.jpg
+image: NestYogi.jpg
 publishedAt: "2025-04-04T10:00:00Z"
 updatedAt: "2025-04-04T10:00:00Z"
 author: "Raoof Altaher"
