--- a/content/blogs/introducing-nestyogi-optimizer-deep-learning/index.mdx
+++ b/content/blogs/introducing-nestyogi-optimizer-deep-learning/index.mdx
@@ -30,7 +30,7 @@ We are excited to share that our work on NestYogi has been published in MDPI Mat
 
 **Altaher, R.; Koyuncu, H. Novel Hybrid Optimization Techniques for Enhanced Generalization and Faster Convergence in Deep Learning Models: The NestYogi Approach to Facial Biometrics. _Mathematics_ 2024, _12_, 2919. https://doi.org/10.3390/math12182919**
 
-## What Makes NestYogi Special?
+# What Makes NestYogi Special?
 
 NestYogi is designed to integrate the strengths of several powerful optimization concepts:
 
@@ -40,7 +40,7 @@ NestYogi is designed to integrate the strengths of several powerful optimization
 
 By combining Yogi's robust adaptivity with Nesterov's intelligent momentum, NestYogi aims to achieve both **faster convergence** and **better generalization**, navigating the complex loss landscapes of deep neural networks more effectively.
 
-### Key Advantages Highlighted in the Paper:
+## Key Advantages Highlighted in the Paper:
 
 Our research, particularly focusing on challenging facial biometric tasks using datasets like LFW and YTF, demonstrated that NestYogi:
 
@@ -51,7 +51,7 @@ Our research, particularly focusing on challenging facial biometric tasks using 
 
 These findings suggest NestYogi is a promising alternative for training deep learning models, potentially overcoming common optimization hurdles.
 
-## Getting Started with NestYogi
+# Getting Started with NestYogi
 
 We've made the implementation of NestYogi publicly available on GitHub. You can easily integrate it into your PyTorch projects.
 
@@ -103,18 +103,17 @@ for _ in range(5): # Example loop
 
     print(f"Step Loss: {loss.item()}")
     # ... rest of your training logic (logging, evaluation) ...
+```
 
 Remember to check the repository for the exact import statements and recommended hyperparameter settings for your specific use case.
 
-## Conclusion and Future Directions
+# Conclusion and Future Directions
 
 NestYogi represents a step forward in deep learning optimization by synergistically combining proven techniques. Our published results demonstrate its potential for achieving faster convergence and improved model accuracy, particularly in complex tasks like facial biometrics.
 
 We encourage the deep learning community to try NestYogi in their own projects. Explore its performance on different architectures and datasets!
 
--   **Read the Paper:** [https://doi.org/10.3390/math12182919](https://doi.org/10.3390/math12182919)
--   **Get the Code:** [https://github.com/raoofaltaher/NestYogi-Optimizer](https://github.com/raoofaltaher/NestYogi-Optimizer)
+- **Read the Paper:** [https://doi.org/10.3390/math12182919](https://doi.org/10.3390/math12182919)
+- **Get the Code:** [https://github.com/raoofaltaher/NestYogi-Optimizer](https://github.com/raoofaltaher/NestYogi-Optimizer)
 
 We welcome feedback, bug reports, and contributions via the GitHub repository. Let's work together to build better and more efficient deep learning models!
-
-```
