--- a/content/blogs/introducing-nestyogi-optimizer-deep-learning/index.mdx
+++ b/content/blogs/introducing-nestyogi-optimizer-deep-learning/index.mdx
@@ -6,7 +6,11 @@ publishedAt: 2025-04-04 13:00:00
 updatedAt: 2025-04-04 13:00:00
 author: "Raoof Altaher"
 isPublished: true
-tags: ["optimization", "deep learning", "machine learning", "NestYogi"]
+tags:
+  - optimization
+  - deep learning
+  - machine learning
+  - NestYogi
 slug: introducing-nestyogi-optimizer-deep-learning
 ---
 
