--- a/content/blogs/introducing-nestyogi-optimizer-deep-learning/index.mdx
+++ b/content/blogs/introducing-nestyogi-optimizer-deep-learning/index.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Introducing NestYogi: A Novel Optimizer for Faster and More Robust Deep Learning"
 description: "Discover NestYogi, a new optimizer presented in our recent paper, combining Nesterov momentum and Yogi's adaptive rates for enhanced deep learning model training."
-image: NestYogi.jpg
+image: ./NestYogi.jpg
 publishedAt: 2025-04-04 13:00:00
 updatedAt: 2025-04-04 13:00:00
 author: "Raoof Altaher"
